// DanangTrip - Core Database Schema
// Paste vao: https://dbdiagram.io

// ========== USERS ==========

Table users {
  id                bigint       [pk, increment]
  username          varchar(50)  [unique, not null]
  email             varchar(100) [unique, not null]
  password          varchar(255) [not null]
  full_name         varchar(100) [not null]
  avatar            varchar(255) [null]
  phone             varchar(20)  [null]
  birthdate         date         [null]
  gender            varchar(20)  [null]
  city              varchar(100) [null]
  role              varchar(20)  [not null, default: 'user', note: 'user | admin']
  status            varchar(20)  [not null, default: 'pending', note: 'active | blocked | pending']
  email_verified_at timestamp    [null]
  last_login_at     timestamp    [null]
  created_at        timestamp
  updated_at        timestamp

  indexes {
    role
    status
  }

  Note: 'Nguoi dung - khach hang va quan tri vien'
}

// ========== DANH MUC ==========

Table categories {
  id         bigint      [pk, increment]
  name       varchar(100) [not null]
  slug       varchar(120) [unique, not null]
  icon       varchar(50)  [null]
  created_at timestamp
  updated_at timestamp

  Note: 'Danh muc dia diem (Am thuc, Vui choi, ...)'
}

Table subcategories {
  id          bigint      [pk, increment]
  category_id bigint      [not null, ref: > categories.id]
  name        varchar(100) [not null]
  slug        varchar(120) [unique, not null]
  created_at  timestamp
  updated_at  timestamp
}

Table tour_categories {
  id         bigint      [pk, increment]
  name       varchar(100) [not null]
  slug       varchar(120) [unique, not null]
  icon       varchar(50)  [null]
  created_at timestamp
  updated_at timestamp

  Note: 'Danh muc tour (Thien nhien, Van hoa, ...)'
}

Table tags {
  id         bigint      [pk, increment]
  name       varchar(80)  [not null]
  slug       varchar(100) [unique, not null]
  created_at timestamp
  updated_at timestamp
}

Table amenities {
  id   bigint     [pk, increment]
  name varchar(100) [not null]
  icon varchar(50)  [null]

  Note: 'Tien ich (WiFi, Bai do xe, ...)'
}

// ========== DIA DIEM ==========

Table locations {
  id                bigint       [pk, increment]
  name              varchar(200) [not null]
  slug              varchar(220) [unique, not null]
  category_id       bigint       [not null, ref: > categories.id]
  subcategory_id    bigint       [null, ref: > subcategories.id]
  description       text         [not null]
  short_description varchar(500) [not null]
  address           varchar(255) [not null]
  district          varchar(50)  [not null]
  ward              varchar(50)  [null]
  latitude          decimal(10,8) [not null]
  longitude         decimal(11,8) [not null]
  phone             varchar(20)  [null]
  email             varchar(100) [null]
  website           varchar(255) [null]
  opening_hours     json         [null]
  price_min         decimal(12,2) [null]
  price_max         decimal(12,2) [null]
  price_level       tinyint      [null, note: '1-4']
  avg_rating        decimal(3,2) [default: 0]
  review_count      int          [default: 0]
  view_count        int          [default: 0]
  favorite_count    int          [default: 0]
  thumbnail         varchar(255) [null]
  images            json         [null]
  status            varchar(20)  [default: 'active', note: 'active | inactive']
  is_featured       boolean      [default: false]
  created_by        bigint       [null, ref: > users.id]
  created_at        timestamp
  updated_at        timestamp

  indexes {
    category_id
    district
    (status, is_featured)
    avg_rating
  }

  Note: 'Dia diem tham quan tai Da Nang'
}

Table location_tags {
  id          bigint [pk, increment]
  location_id bigint [not null, ref: > locations.id]
  tag_id      bigint [not null, ref: > tags.id]

  indexes {
    (location_id, tag_id) [unique]
  }
}

Table location_amenities {
  id          bigint [pk, increment]
  location_id bigint [not null, ref: > locations.id]
  amenity_id  bigint [not null, ref: > amenities.id]

  indexes {
    (location_id, amenity_id) [unique]
  }
}

// ========== TOUR ==========

Table tours {
  id                   bigint       [pk, increment]
  name                 varchar(200) [not null]
  slug                 varchar(220) [unique, not null]
  tour_category_id     bigint       [not null, ref: > tour_categories.id]
  description          text         [null]
  short_desc           varchar(500) [null]
  itinerary            json         [null, note: 'Lich trinh chi tiet']
  inclusions           json         [null, note: 'Dich vu bao gom']
  exclusions           json         [null, note: 'Dich vu khong bao gom']
  price_adult          decimal(12,2) [not null]
  price_child          decimal(12,2) [default: 0]
  price_infant         decimal(12,2) [default: 0]
  discount_percent     int          [default: 0]
  duration             varchar(50)  [null, note: 'VD: 1 ngay, 3 gio']
  start_time           varchar(50)  [null]
  meeting_point        varchar(255) [null]
  max_people           int          [default: 0]
  min_people           int          [default: 1]
  available_from       date         [null]
  available_to         date         [null]
  thumbnail            varchar(255) [null]
  images               json         [null]
  status               varchar(20)  [default: 'active', note: 'active | inactive']
  booking_availability varchar(20)  [default: 'open', note: 'open | sold_out']
  is_featured          boolean      [default: false]
  is_hot               boolean      [default: false]
  view_count           int          [default: 0]
  booking_count        int          [default: 0]
  rating_count         int          [default: 0]
  rating_avg           decimal(3,2) [default: 0]
  created_by           bigint       [null, ref: > users.id]
  created_at           timestamp
  updated_at           timestamp

  indexes {
    price_adult
    (status, booking_availability, tour_category_id, price_adult)
    is_featured
    is_hot
  }

  Note: 'San pham tour du lich'
}

Table tour_schedules {
  id            bigint       [pk, increment]
  tour_id       bigint       [not null, ref: > tours.id]
  start_date    date         [not null]
  end_date      date         [not null]
  max_people    int          [default: 0]
  booked_people int          [default: 0]
  price_adult   decimal(12,2) [null, note: 'Override gia tour neu co']
  price_child   decimal(12,2) [null]
  price_infant  decimal(12,2) [null]
  status        varchar(20)  [default: 'available', note: 'available | full | cancelled']
  created_at    timestamp
  updated_at    timestamp

  indexes {
    (tour_id, start_date) [unique]
    start_date
    status
  }
}

Table tour_locations {
  id          bigint [pk, increment]
  tour_id     bigint [not null, ref: > tours.id]
  location_id bigint [not null, ref: > locations.id]
  sort_order  int    [default: 0]

  indexes {
    (tour_id, location_id) [unique]
  }

  Note: 'Tour tham quan nhung dia diem nao'
}

// ========== KHUYEN MAI ==========

Table promotions {
  id                  bigint       [pk, increment]
  code                varchar(50)  [unique, not null]
  name                varchar(150) [not null]
  description         text         [null]
  discount_type       varchar(10)  [not null, note: 'percent | fixed']
  discount_value      decimal(12,2) [default: 0]
  max_discount_amount decimal(12,2) [null]
  min_order_amount    decimal(12,2) [default: 0]
  usage_limit         int          [null, note: 'NULL = khong gioi han']
  usage_per_user      int          [default: 1]
  used_count          int          [default: 0]
  starts_at           timestamp    [null]
  ends_at             timestamp    [null]
  status              varchar(20)  [default: 'active', note: 'active | inactive | expired']
  created_at          timestamp
  updated_at          timestamp

  indexes {
    status
    (starts_at, ends_at)
  }
}

// ========== DAT TOUR & THANH TOAN ==========

Table bookings {
  id                  bigint       [pk, increment]
  booking_code        varchar(20)  [unique, not null]
  user_id             bigint       [null, ref: > users.id]
  promotion_id        bigint       [null, ref: > promotions.id]
  customer_name       varchar(100) [not null]
  customer_email      varchar(100) [not null]
  customer_phone      varchar(20)  [not null]
  customer_address    text         [null]
  customer_note       text         [null]
  total_amount        decimal(12,2) [not null]
  discount_amount     decimal(12,2) [default: 0]
  final_amount        decimal(12,2) [not null]
  deposit_amount      decimal(12,2) [default: 0]
  payment_method      varchar(30)  [not null]
  payment_status      varchar(30)  [default: 'unpaid', note: 'unpaid | pending | success | failed | refunded | partially_paid']
  booking_status      varchar(30)  [default: 'pending', note: 'pending | confirmed | completed | cancelled']
  cancellation_reason text         [null]
  booked_at           timestamp    [not null]
  confirmed_at        timestamp    [null]
  cancelled_at        timestamp    [null]
  completed_at        timestamp    [null]
  created_at          timestamp
  updated_at          timestamp

  indexes {
    booking_status
    payment_status
    user_id
    booked_at
  }

  Note: 'Don dat tour'
}

Table booking_items {
  id               bigint       [pk, increment]
  booking_id       bigint       [not null, ref: > bookings.id]
  tour_id          bigint       [not null, ref: > tours.id]
  tour_schedule_id bigint       [not null, ref: > tour_schedules.id]
  item_type        varchar(30)  [default: 'tour']
  item_name        varchar(200) [not null]
  travel_date      date         [not null]
  quantity_adult   int          [default: 0]
  quantity_child   int          [default: 0]
  quantity_infant  int          [default: 0]
  unit_price_adult decimal(12,0) [not null]
  unit_price_child decimal(12,0) [not null]
  unit_price_infant decimal(12,0) [not null]
  subtotal         decimal(12,0) [not null]
  status           varchar(30)  [default: 'pending']
  created_at       timestamp
  updated_at       timestamp

  indexes {
    (booking_id, tour_id)
    travel_date
  }
}

Table payments {
  id               bigint       [pk, increment]
  booking_id       bigint       [not null, ref: > bookings.id]
  transaction_code varchar(100) [unique, not null]
  amount           decimal(12,2) [not null]
  payment_method   varchar(30)  [not null]
  payment_status   varchar(30)  [default: 'pending', note: 'pending | success | failed | refunded']
  payment_gateway  varchar(50)  [null, note: 'sepay | bank_transfer']
  gateway_response json         [null]
  paid_at          timestamp    [null]
  refunded_at      timestamp    [null]
  refund_reason    text         [null]
  created_at       timestamp
  updated_at       timestamp

  indexes {
    booking_id
    payment_status
    paid_at
  }
}

Table cart_items {
  id               bigint [pk, increment]
  user_id          bigint [not null, ref: > users.id]
  tour_id          bigint [not null, ref: > tours.id]
  tour_schedule_id bigint [not null, ref: > tour_schedules.id]
  quantity_adult   int    [default: 1]
  quantity_child   int    [default: 0]
  quantity_infant  int    [default: 0]
  created_at       timestamp
  updated_at       timestamp

  indexes {
    (user_id, tour_id, tour_schedule_id) [unique]
  }
}

// ========== DANH GIA ==========

Table ratings {
  id              bigint    [pk, increment]
  user_id         bigint    [not null, ref: > users.id]
  location_id     bigint    [null, ref: > locations.id]
  tour_id         bigint    [null, ref: > tours.id]
  booking_id      bigint    [null, ref: > bookings.id]
  score           tinyint   [not null, note: '1-5 sao']
  comment         text      [null]
  image_count     tinyint   [default: 0]
  status          varchar(20) [default: 'approved', note: 'pending | approved | rejected']
  rejected_reason varchar(255) [null]
  approved_by     bigint    [null, ref: > users.id]
  approved_at     timestamp [null]
  helpful_count   int       [default: 0]
  created_at      timestamp
  updated_at      timestamp

  Note: 'Chi mot trong ba khoa ngoai location_id / tour_id / booking_id khac NULL'
}

Table rating_images {
  id        bigint      [pk, increment]
  rating_id bigint      [not null, ref: > ratings.id]
  image_url varchar(255) [not null]
  created_at timestamp
  updated_at timestamp
}

// ========== BLOG ==========

Table blog_categories {
  id         bigint      [pk, increment]
  name       varchar(100) [not null]
  slug       varchar(120) [unique, not null]
  sort_order int          [default: 0]
  created_at timestamp
  updated_at timestamp
}

Table blog_posts {
  id             bigint       [pk, increment]
  title          varchar(300) [not null]
  slug           varchar(320) [unique, not null]
  excerpt        varchar(600) [null]
  content        text         [not null]
  featured_image varchar(500) [null]
  author_id      bigint       [not null, ref: > users.id]
  view_count     int          [default: 0]
  status         varchar(20)  [default: 'draft', note: 'draft | published | archived']
  published_at   timestamp    [null]
  created_at     timestamp
  updated_at     timestamp

  indexes {
    (status, published_at)
    author_id
  }
}

Table blog_post_categories {
  id               bigint [pk, increment]
  post_id          bigint [not null, ref: > blog_posts.id]
  blog_category_id bigint [not null, ref: > blog_categories.id]

  indexes {
    (post_id, blog_category_id) [unique]
  }
}

// ========== CHATBOT AI ==========

Table chat_knowledge_base {
  id               bigint       [pk, increment]
  type             varchar(30)  [not null, note: 'tour | location | blog | policy']
  title            varchar(255) [not null]
  content          text         [not null, note: 'Van ban da chuan hoa, dung de embedding']
  reference_id     bigint       [null, note: 'FK logic toi tours / locations / blog_posts']
  reference_slug   varchar(280) [null]
  metadata         json         [null, note: 'Gia, rating, slug phuc vu the goi y']
  embedding        json         [null, note: 'Vector 768 chieu (Gemini text-embedding-001)']
  is_active        boolean      [default: true]
  last_embedded_at timestamp    [null]
  created_at       timestamp
  updated_at       timestamp

  indexes {
    (type, is_active)
    reference_id
    reference_slug
  }

  Note: 'Co so tri thuc chatbot'
}

Table chat_cache {
  id                  bigint      [pk, increment]
  cache_key           varchar(64) [unique, not null, note: 'SHA-256 cua query chuan hoa']
  intent              varchar(50) [not null]
  query_normalized    text        [not null]
  language            varchar(10) [not null]
  response_text       text        [not null]
  embedding           json        [null, note: 'Vector cau hoi cho cosine similarity']
  cosine_threshold    decimal(4,2) [null, note: '0.97 (giao dich) hoac 0.92 (FAQ)']
  suggested_questions json        [null]
  hit_count           int         [default: 0]
  expires_at          timestamp   [null]
  created_at          timestamp
  updated_at          timestamp

  Note: 'Cache semantic cho chatbot'
}

// ========== PHU TRO ==========

Table favorites {
  id          bigint    [pk, increment]
  user_id     bigint    [not null, ref: > users.id]
  location_id bigint    [null, ref: > locations.id]
  tour_id     bigint    [null, ref: > tours.id]
  created_at  timestamp

  indexes {
    (user_id, location_id) [unique]
    (user_id, tour_id) [unique]
  }
}

Table notifications {
  id         bigint      [pk, increment]
  user_id    bigint      [not null, ref: > users.id]
  type       varchar(50) [not null]
  title      varchar(200) [not null]
  message    text         [not null]
  data       json         [null]
  is_read    boolean      [default: false]
  read_at    timestamp    [null]
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, is_read)
    created_at
  }
}
